--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,36 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span><i class="fas fa-cog fa-lg"></i></span>
+      </div>
+    </header>
+
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i>
+      Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          class="user-component__avatar"
+          src="https://avatars2.githubusercontent.com/u/60102000?s=460&u=7a5a9a8c0377e26a98868907b8fc18905c165918&v=4"
+        />
+        <div class="user-component__text">
+          <h4 class="user-component__title">Chicken</h4>
+          <h6 class="user-component__subtitle">chicken</h6>
+        </div>
+      </div>
+
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
