--- a/friends.html
+++ b/friends.html
@@ -73,8 +73,11 @@
           </div>
 
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+            <div class="non-display-flex">
+              <!-- css에서 flex box를 피하기 위함 -->
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -89,7 +92,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification">1</span>
+            <span class="nav__notification badge">1</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
@@ -100,7 +103,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="more.html">
-            <div class="nav__dot"></div>
+            <div class="nav__dot dot"></div>
             <i class="fas fa-ellipsis-h fa-2x"></i>
           </a>
         </li>
