--- a/chats.html
+++ b/chats.html
@@ -33,23 +33,25 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img
-            class="user-component__avatar user-component__avatar"
-            src="https://avatars2.githubusercontent.com/u/60102000?s=460&u=7a5a9a8c0377e26a98868907b8fc18905c165918&v=4"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Chicken</h4>
-            <h6 class="user-component__subtitle">Please check my chicken</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              class="user-component__avatar user-component__avatar"
+              src="https://avatars2.githubusercontent.com/u/60102000?s=460&u=7a5a9a8c0377e26a98868907b8fc18905c165918&v=4"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Chicken</h4>
+              <h6 class="user-component__subtitle">Please check my chicken</h6>
+            </div>
+          </div>
+
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
