--- a/chat.html
+++ b/chat.html
@@ -37,7 +37,44 @@
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, June 30, 2020</div>
+
+      <div class="message-row">
+        <img
+          src="https://avatars2.githubusercontent.com/u/60102000?s=460&u=7a5a9a8c0377e26a98868907b8fc18905c165918&v=4"
+        />
+        <div class="message-row__content">
+          <span class="message__author">프라이드 치킨</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <spna class="message__time">21:27</spna>
+          </div>
+        </div>
+      </div>
+
+      <div class="message-row message-row--own">
+        <div class="message-row__content">
+          <div class="message__info">
+            <span class="message__bubble">Wow i like too!</span>
+            <spna class="message__time">21:27</spna>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <form class="reply">
+      <div class="reply__column">
+        <i class="far fa-plus-square fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message" />
+        <i class="far fa-smile-wink fa-lg"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
+    </form>
 
     <!-- 폰트추가 시작 -->
     <script
