--- a/settings.html
+++ b/settings.html
@@ -49,7 +49,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-flask"></i>
-            <span>Kokoa Lab</span>
+            <span class="more-space">Kokoa Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
@@ -57,7 +57,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fas fa-info-circle"></i>
-            <span>Version</span>
+            <span class="more-space">Version</span>
           </div>
           <div class="settings__setting-column">Latest Version</div>
         </li>
