--- a/more.html
+++ b/more.html
@@ -29,9 +29,8 @@
         <span><i class="fas fa-music fa-lg"></i></span>
         <span>
           <a href="settings.html">
-            <i class="fas fa-cog fa-lg">
-              <div class="cog-icon-dot dot"></div>
-            </i>
+            <i class="fas fa-cog fa-lg"></i>
+            <div class="cog-icon-dot dot"></div>
           </a>
         </span>
       </div>
@@ -123,6 +122,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <!-- 폰트추가 시작 -->
     <script
