--- a/chat.html
+++ b/chat.html
@@ -65,7 +65,7 @@
 
     <form class="reply">
       <div class="reply__column">
-        <i class="far fa-plus-square fa-lg"></i>
+        <i class="far fa-plus-square fa-2x"></i>
       </div>
       <div class="reply__column">
         <input type="text" placeholder="Write a message" />
@@ -75,6 +75,10 @@
         </button>
       </div>
     </form>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <!-- 폰트추가 시작 -->
     <script
