--- a/chats.html
+++ b/chats.html
@@ -81,6 +81,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <!-- 폰트추가 시작 -->
     <script
       src="https://kit.fontawesome.com/46777cd0b8.js"
