--- a/find.html
+++ b/find.html
@@ -27,9 +27,8 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span>
-          <i class="fas fa-cog fa-lg">
-            <div class="cog-icon-dot dot"></div>
-          </i>
+          <i class="fas fa-cog fa-lg"></i>
+          <div class="cog-icon-dot dot"></div>
         </span>
       </div>
     </header>
@@ -66,6 +65,7 @@
             >Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i
           ></spna>
         </div>
+
         <div class="open-post">
           <div class="open-post__column">
             <h5 class="open-post__title">#BTS</h5>
@@ -79,6 +79,7 @@
               <span class="open-post__member-status">Active</span>
             </div>
           </div>
+
           <div class="open-post__column">
             <div class="open-post__photo">
               <img
@@ -120,6 +121,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
 
     <!-- 폰트추가 시작 -->
     <script
