--- a/friends.html
+++ b/friends.html
@@ -110,6 +110,14 @@
       </ul>
     </nav>
 
+    <div id="splash-screen">
+      <i class="fas fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <!-- 폰트추가 시작 -->
     <script
       src="https://kit.fontawesome.com/46777cd0b8.js"
