--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <!-- 폰트추가 시작 -->
     <script
       src="https://kit.fontawesome.com/46777cd0b8.js"
