--- a/friends.html
+++ b/friends.html
@@ -115,7 +115,7 @@
     </div>
 
     <div id="no-mobile">
-      <span>Your screen is too big ㅠㅠ</span>
+      <span>Your screen is super big ㅠㅠ</span>
     </div>
 
     <!-- 폰트추가 시작 -->
